src/components/header/index.module.scss
@import '@styles/variables.scss';
@import '@styles/layout.scss';

:root {
  --nav-size: 60px;
  --border: 1px solid #474a4d;
  --border-radius: 8px;
  --speed: 500ms;
}

.line {
  border-right: 1px solid var(--border-color);
}

.dropdown_menu {
  background-color: var(--background-color);
  color: var(--text-color);

  button {
    background: none;
    color: inherit;
  }
}

.banner_on {
  margin-top: 3em;
}

.container {
  width: 100%;

  z-index: 200;
  background-color: var(--background-color);
  color: var(--text-color);
  transition: background-color #{$theme-duration} ease-out,
    color #{$theme-duration} ease-out;

  .content {
    width: 100%;
    height: 110px;
    display: grid;
    grid-template-columns: 0.5fr 1fr 0.5fr;
    grid-template-rows: 0.5fr 2fr 0.5fr;
    gap: 0px 20px;
    grid-template-areas:
      'Events Logo User'
      '. . .'
      '. . .';
    justify-items: center;
    padding: 50px 40px;

    /* FOR DEBUG (keep) */
    // @include respond-to('phone') {
    //   background-color: red;
    // }
    // @include respond-to('tablet') {
    //   background-color: rgb(47, 0, 255);
    // }
    // @include respond-to('desktop') {
    //   background-color: rgb(30, 255, 0);
    // }
    @include respond-to('phone') {
      padding: 25px 20px;
    }

    @include respond-to('tablet') {
      padding: 50px 40px;
    }

    .left {
      display: flex;
      align-items: center;
      justify-content: center;

      grid-area: Events;
    }

    .right {
      display: flex;
      align-items: center;
      justify-content: center;
      grid-area: User;
      z-index: 500;

      & > * {
        font-size: 16px;
      }

      .hamburger {
        width: 30px;
        height: auto;
        margin-left: 10px;
      }
    }
  }
}

.mr {
  padding-right: 10px;
  border-right: 1px solid var(--border-color);
  margin-right: 10px;
}

.address {
  position: absolute;

  color: var(--secondary-color);
  transform: translateY(-100%);
}

.no__address__text {
  width: 125px;
  word-break: keep-all;

  @include respond-to('desktop') {
    width: 250px;
  }
}

.link {
  font-size: 20px;

  @include respond-to('desktop') {
    font-size: 30px;
  }
}

ul {
  margin: 0;
  padding: 0;
}

li {
  list-style: none;
}

.menu_item {
  height: 50px;

  display: flex;
  align-items: center;
  border-radius: var(--border-radius);
  border: var(--text-color);
  transition: background var(--speed);
  padding: 0.5rem;
}

.menu_item .header_button:hover {
  filter: none;
}

.menu_item:hover {
  background-color: #525357;
}

.icon-right {
  margin-left: auto;
}

// EVENTS
.header_button {
  z-index: 100;
  --button-size: calc(var(--nav-size) * 0.5);
  font-size: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: var(--background-color);
  transition: filter 300ms;
  border: none;
  gap: 0.5rem;
  padding: 0.75em 0.5em;
  word-break: keep-all;
}

.menu_left {
  position: relative;

  .header_button {
    position: unset;
  }

  .header_button_open {
    position: relative;
  }
}

.header_button svg > path {
  fill: var(--text-color);
}

.header_button_open {
  position: relative;
}

.header_button_toggled {
  background-color: var(--gray-80);
  color: var(--background-color);

  svg > path {
    fill: var(--background-color);
  }
}

.header_button:hover {
  filter: brightness(1.2);
}

.logo {
  grid-area: Logo;
}

